--- a/css/styles.css
+++ b/css/styles.css
@@ -763,6 +763,9 @@ footer .logo{margin: 0;}
                     line-height: 1.1;
                     letter-spacing: 0.02em;
                     text-transform: capitalize;}
+    .mob-menu-page1:hover{color: var(--violet-color);}
+    .mob-menu-page2:hover{color: var(--violet-color);}
+    .mob-menu-page3:hover{color: var(--violet-color);}
     .mob-menu-page1:focus{color: var(--violet-color);}
     .mob-menu-page2:focus{color: var(--violet-color);}
     .mob-menu-page3:focus{color: var(--violet-color);}
