--- a/css/styles.css
+++ b/css/styles.css
@@ -920,7 +920,7 @@ img{max-width: 100%; height: auto; display: block;}
     .footer-div{flex-wrap: wrap;
                 align-items: center;
                 /*justify-content: center;*/
-                justify-content: center;
+                /*justify-content: center;*/
                 }
 .footer-text{margin-bottom: 72px;}
 .customer-link{width: 190px;}
@@ -995,6 +995,7 @@ img{max-width: 100%; height: auto; display: block;}
     .sec-button{margin-top: 36px;}
     .container{max-width: 768px;
                padding-left: 16px; padding-right: 16px;}
+    .footer .container{max-width: 552px;}
     .header-add{display: flex; 
                 margin-left: auto;
                 margin-top: 16px;}
@@ -1225,4 +1226,5 @@ img{width: 100%; height: auto; display: block;}
                margin-left: 24px;}
 .footer .logo{justify-content: flex-start;
               align-items: flex-start;}
+.footer .container{min-width: 1158px;}
 }
