--- a/css/styles.css
+++ b/css/styles.css
@@ -832,6 +832,10 @@ footer .logo{margin: 0;}
     .workers-soc-list{display: flex;
                 justify-content: center;
                 gap: 24px;}
+
+/*@media screen and (max-width: 428px) {
+    .menu-soc{gap: 24px;}    
+}*/
             
 @media screen and (min-width: 320px){
     .header{padding-top: 24px; 
@@ -922,18 +926,18 @@ img{max-width: 100%; height: auto; display: block;}
                 /*justify-content: center;*/
                 /*justify-content: center;*/
                 }
-.footer-text{margin-bottom: 72px;}
+.footer-main{margin-bottom: 72px;}
 .customer-link{width: 190px;}
-.footer-soc{margin-bottom: 72px;
-            justify-content: center;}
+.footer-soc{justify-content: center;}
 .footer-soc-div{align-items: center;
-                justify-content: center;}
+                justify-content: center;
+                margin-left: 0px;
+                margin-bottom: 72px;}
 .footer-input{width: 100%;
               opacity: 0.3;}
 .footer-sub{margin-left: 0px;
             margin-right: 0;}
 .footer-p{text-align: center;}
-.footer-soc-div{margin-left: 0px;}
 .subscribe-p{text-align: center;}
 .footer-button{margin-top: 16px;
                margin-left: auto;}
@@ -1092,6 +1096,7 @@ img{max-width: 100%; height: auto; display: block;}
                    margin-left: 24px;}
     .footer .logo{justify-content: flex-start;
                   align-items: flex-start;}
+    .footer-main{margin-bottom: 0;}
     }
 
 /*ADAPTATION 1158*/
@@ -1230,4 +1235,5 @@ img{width: 100%; height: auto; display: block;}
               align-items: flex-start;}
 .footer .container{min-width: 1158px;
                    padding-left: 16px;}
+.footer-main{margin-bottom: 0;}
 }
