--- a/css/styles.css
+++ b/css/styles.css
@@ -833,9 +833,9 @@ footer .logo{margin: 0;}
                 justify-content: center;
                 gap: 24px;}
 
-/*@media screen and (max-width: 428px) {
+@media screen and (max-width: 428px) {
     .menu-soc{gap: 24px;}    
-}*/
+}
             
 @media screen and (min-width: 320px){
     .header{padding-top: 24px; 
