--- a/css/styles.css
+++ b/css/styles.css
@@ -777,7 +777,7 @@ footer .logo{margin: 0;}
     .mob-number{font-family: 'Roboto';
         font-style: normal;
         font-weight: 700;
-        font-size: 36px;
+        /*font-size: 36px;*/
         line-height: 1.1;
         letter-spacing: 0.02em;
         text-transform: capitalize;
@@ -834,7 +834,8 @@ footer .logo{margin: 0;}
                 gap: 24px;}
 
 @media screen and (max-width: 428px) {
-    .menu-soc{gap: 24px;}    
+    .menu-soc{gap: 24px;} 
+    .mob-number{font-size: 26px;}   
 }
             
 @media screen and (min-width: 320px){
@@ -947,6 +948,7 @@ img{max-width: 100%; height: auto; display: block;}
 .footer .logo{display: flex;
               justify-content: center;
               align-items: center;}
+.mob-number{font-size: 36px;}
 }
 
 /*ADAPTATION 768*/
