--- a/css/styles.css
+++ b/css/styles.css
@@ -1093,7 +1093,7 @@ img{max-width: 100%; height: auto; display: block;}
     /*.footer{padding-left: 108px;} вроде не надо*/
     .footer-sub{margin-left: 0px;
                 margin-right: 42px;
-                padding-top: 72px;
+                margin-top: 72px;
                 /*margin-right: 42px; так?*/}
     .footer-text{margin-bottom: 0;}
     .footer-soc-div{margin-left: 24px;
