--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ body {
                     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 .header-link:hover, .header-link:focus{color: var(--violet-color);}
 .header-link:hover::after{transform: scaleX(1);}
+.header-active{color: var(--violet-color);}
 .stick::before{content: ""; 
     width: 48px;
     height: 4px;
