--- a/css/styles.css
+++ b/css/styles.css
@@ -806,7 +806,7 @@ footer .logo{margin: 0;}
            justify-content: center;}
 
 
-/*ADAPTATION 428*/
+/*ADAPTATION 320|428*/
 
 
     .container{width: 100%;}
