--- a/css/styles.css
+++ b/css/styles.css
@@ -567,7 +567,8 @@ footer .logo{margin: 0;}
              line-height: 1.16;
              letter-spacing: 0.01em;
              color: var(--light-gray-color);}
-.modal-input{width: 360px;
+.modal-input{/*width: 360px;*/
+             width: 100%;
              height: 40px;
              border: 1px solid rgba(46, 47, 66, 0.4);
              border-radius: 4px;
@@ -589,7 +590,8 @@ footer .logo{margin: 0;}
             line-height: 1.16;
             letter-spacing: 0.04em;
             color: var(--light-gray-color);}*/
-.modal-textarea{width: 360px;
+.modal-textarea{/*width: 360px;*/
+                width: 100%;
                 resize: none;
                 font-size: 12px;
                 line-height: 1.16;
@@ -951,8 +953,9 @@ img{max-width: 100%; height: auto; display: block;}
               justify-content: center;
               align-items: center;}
 .mob-number{font-size: 36px;}
-.modal{width: 392px; 
-       height: 576px;
+.modal{width: 100%;
+       max-width: 408px; 
+       /*height: 576px;*/
        padding: 16px;}
 .modal-button{margin-right: 8px;    
               margin-top: 8px;}
