--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,8 @@ body {
             margin-right: auto;}
 .sec-h-one{/*width: 496px;*/
     font-weight: 700;
-    font-size: 56px;
+    font-size: 26px;
+    /*font-size: 56px;*/
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
@@ -780,7 +781,7 @@ footer .logo{margin: 0;}
     .mob-number{font-family: 'Roboto';
         font-style: normal;
         font-weight: 700;
-        /*font-size: 36px;*/
+        font-size: 26px;
         line-height: 1.1;
         letter-spacing: 0.02em;
         text-transform: capitalize;
@@ -816,7 +817,7 @@ footer .logo{margin: 0;}
         rgba(46, 47, 66, 0.7))}
         .sec-h-one{text-align: center;
             /*width: 320px;*/
-            font-size: 36px;
+            /*font-size: 36px;*/
             line-height: 1.1;
             text-transform: capitalize;}
     .sec-two-text{font-size: 16px;
@@ -838,8 +839,11 @@ footer .logo{margin: 0;}
 
 @media screen and (max-width: 428px) {
     .menu-soc{gap: 24px;} 
-    .mob-number{font-size: 26px;}   
-    .sec-h-one{font-size: 32px;}
+}
+
+@media screen and (min-width: 428px) {
+    .mob-number{font-size: 36px;}
+    .sec-h-one{font-size: 36px;}
 }
 
 @media screen and (min-width: 320px){
@@ -865,7 +869,7 @@ footer .logo{margin: 0;}
             padding-bottom: 112px;}
     .sec-h-one{text-align: center;
         /*width: 320px;*/
-        font-size: 36px;
+        /*font-size: 36px;*/
         line-height: 1.1;
         text-transform: capitalize;}
     .sec-button{margin-top: 72px;}
@@ -952,7 +956,6 @@ img{max-width: 100%; height: auto; display: block;}
 .footer .logo{display: flex;
               justify-content: center;
               align-items: center;}
-.mob-number{font-size: 36px;}
 .modal{width: 100%;
        max-width: 408px; 
        /*height: 576px;*/
