--- a/css/styles.css
+++ b/css/styles.css
@@ -1239,7 +1239,8 @@ img{width: 100%; height: auto; display: block;}
     letter-spacing: 0.02em;
     text-align: left;}
 .footer-sub{margin-left: 80px;
-            margin-right: 0;}
+            margin-right: 0;
+            margin-top: 0;}
 .footer-text{margin-bottom: 0;}
 .customer-link{width: 168px;}
 .footer{padding-left: 0;
